--- a/src/Components/PageHeader/PageHeader.css
+++ b/src/Components/PageHeader/PageHeader.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 10px 20px;
+  flex-wrap: wrap;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -26,4 +27,13 @@
 
 .page-header .nav-list a:hover {
   text-decoration: underline;
+}
+
+.api-project-header .api-project-menu {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px 16px;
+  flex-wrap: wrap;
 }
